# GeoPlanAgent

./: .benchmark_monitor.py  .benchmark_watch.py  .env.template  .gitignore  AUDIT_FINDINGS.md  AUDIT_PROMPT.md  DO_NOT_TRY.md  LICENSE  PAPER_AUDIT_PROMPT.md  PRODUCTION_WALKTHROUGH_PROMPT.md  README.md  SESSION_NOTES.md  TODO_AGENT_FIXES.md  V14_SUB03_PLAN.md  _audit_vlm_recompute.py  audit_collapsed_reader.py  audit_dataset_stats.py  audit_recompute_table1.py  audit_recompute_table2.py  audit_report.md  audit_table1_rows.json  audit_vlm_rows.py  benchmark_runner.py  check_credits.py  crop_maps.py  custom.bib  geojson_metrics.py  geomap_ablation_flow.html  geomap_writing_plan.html  openrouter_client.py  paper.tex  paper_audit_report.md  pyproject.toml  test_batch_pipeline.py  test_batch_pipeline_sam.py  test_batch_pipeline_sam2_auto.py  test_map_crop.py  vision_rotation_predictions.json
MINIMA/: .gitignore  README.md  load_model.py  requirements.txt
MINIMA/weights/: download.sh
ablations/: PLAN.md  README.md  __init__.py  _shared.py  audit_locate_results.py  build_vlm_e2e_subset.py  cached_pdf_info_for_locate_ablations.json  cases_needing_worker_rerun.txt  diff_reader_output.py  extract_pdf_info_cache.py  locate_ablation_missing_cases.txt  locate_only_eval.py  locate_vlm_direct.py  reader_diff_report.json  repopulate_pdf_info_cache.py  rerun_locate_fixes.sh  rerun_reader_only.py  run.py  run_locate_loo.sh  run_subset_ablations.sh  sam_base_prompt_search.py  subset_40.json  utils.py  vlm_e2e_pdf_to_geojson.py  vlm_segmentation.py  vlm_segmentation_diag.py
ablations/locate_iou_subset/: README.md  cases.txt  compare_iou.py
ablations/locate_only_eval/: AUDIT.md
ablations/prompts/: locate_prompt_diffs.md  locate_prompt_full.md  locate_prompt_min_1_tool.md  locate_prompt_min_2_tool.md  locate_prompt_min_3_tool.md  locate_prompt_no_grid_ref.md  locate_prompt_no_intersect.md  locate_prompt_no_la_check.md  locate_prompt_no_place.md  locate_prompt_no_postcode.md  locate_prompt_no_road.md  vlm_direct_prompt.md  vlm_e2e_pdf_to_geojson_prompt.md
batch_test_results_sam2_auto/: results.json
batch_test_results_v2/: results.json
docs/: README.md  _gen_slider_data.py  app.js  index.html  styles.css
experiments/: inspire_snap_ablation.py
figures/: make_section5_figures.py
geoplanagent/: README.md  __init__.py  build_oml_road_index.py  fold_routing.py  metrics.py  paths.py  prompts.py  run.py  schemas.py  utils.py
models/: README.md
scripts/: _pricing.py  analyze_v21.py  annotate_no_crop.json  annotate_page_overrides.json  annotate_prerender.py  annotate_server.py  build_dataset.py  build_oml_road_index.py  check_credits.py  compare_semantic_vs_instance.py  compare_temperatures.py  compute_costs.py  compute_extract_placement_metric.py  compute_figures.py  compute_placement_v3_vs_v21.py  compute_tables.py  debug_sam_load.py  eval_rotation_kfold.py  eval_sam_kfold_shape_iou.py  eval_sam_kfold_v2.py  full_v3_semantic_replay.py  make_classification_bars.py  mask_swap_at_fixed_affine.py  merge_vlm_results.py  minima_disambig_22.py  monitor_lucky_shot.py  monitor_run.py  reproduce_paper.py  rotation_annotator.py  run_benchmark.sh  sam3_logit_disambig.py  setup_os_opendata.py  sigma_regression_risk.py  sigma_signal_analysis.py  single_loftr_at_winning_window.py  test_mask_postprocessing.py  vision_rotation_detect.py  visualize_case.py  viz_reader_page_ranking.py  viz_reader_page_ranking_v2.py  (+1 more)
tests/: test_fold_routing.py
tools/: README.md  __init__.py  agent.py  agent_core.py  agent_prompts.py  agent_schemas.py  agent_tools_extract.py  agent_tools_locate.py  agent_tools_match.py  agent_tools_render.py  agent_tools_verify.py  boundary_tools.py  build_oml_road_index.py  candidates.py  code_point.py  critic.py  delaunay_filter.py  geo_tools.py  geocoders.py  geocoding.py  map_crop.py  mask_ops.py  os_names.py  os_opendata_tiles.py  pdf_tools.py  positioning.py  positioning_sources.py  positioning_v3.py  positioning_v3_10.py  positioning_v3_7.py  rotation_classifier.py  sam3_boundary.py  scoring.py  template_matching.py  text_extraction.py  verification_checks.py  visualization_tools.py
training/: README.md  boundary_augmentations.py  build_sam3_training_set.py  migrate_sam3_to_peft.py  seg_metrics.py  train_boundary_only.py  train_rotation.py  train_rotation_classifier.py  train_rotation_kfold.py  train_sam3_kfold.py
(+2970 files in other folders)
