[project]
name = "GeoMapAgent"
version = "0.1.0"
description = "Planning Document GeoJSON Extraction Benchmark - Evaluating LLM performance on spatial data extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",
    "shapely>=2.0.0",
    "folium>=0.14.0",
    "gspread>=6.0.0",
    "google-auth>=2.23.0",
    "dotenv>=0.9.9",
    "ruff>=0.14.10",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "opencv-python>=4.11.0.86",
    "osmnx>=2.0.7",
    "scikit-image>=0.25.2",
    "cartopy>=0.25.0",
    "geopy>=2.4.1",
    "pytesseract>=0.3.13",
]
